fix project image overflow

--- a/public/less/project.less
+++ b/public/less/project.less
@@ -34,6 +34,10 @@
   .project-image {
     float: right;
     width: 55%;
+    height: 404px;
+    .owl-stage-outer {
+      height: inherit;
+    }
     &.owl-carousel .owl-item img {
       height: 400px;
       margin-right: 100px;
